k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-services
spec:
  selector:
    app: django-app
  ports:
  - port: 8000
    targetPort: 8000
